flask.log
nohup: ignoring input
 * Serving Flask app 'main'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://169.254.0.21:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 184-522-448
127.0.0.1 - - [05/Oct/2025 20:23:02] "GET /api/health HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "HEAD / HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "GET / HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "GET / HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "GET /assets/index-ODQHlWXV.js HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "GET /assets/index-DHM4jFlw.css HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:18] "GET /api/products HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:25] "GET / HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:26] "GET /assets/index-DHM4jFlw.css HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:26] "GET /assets/index-ODQHlWXV.js HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:28] "GET /api/products HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:28] "GET /favicon.ico HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:39] "GET /api/categories HTTP/1.1" 200 -
10.75.76.1 - - [05/Oct/2025 20:23:39] "[36mGET /api/products HTTP/1.1[0m" 304 -
 * Detected change in '/home/ubuntu/ecommerce-project/backend/ecommerce-backend/src/config.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/ubuntu/ecommerce-project/backend/ecommerce-backend/src/main.py", line 9, in <module>
    from src.config import Config
  File "/home/ubuntu/ecommerce-project/backend/ecommerce-backend/src/config.py", line 10
    MONGO_URI = os.environ.get(\'MONGO_URI\') or \'mongodb+srv://atacadaodosdanone_db_user:PFZdVRSnsBm1Q5ZY@cluster0.lplaiox.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\' 
                                ^
SyntaxError: unexpected character after line continuation character
